# Waffle

./: .gitignore  CMakeLists.txt
example/: CMakeLists.txt
example/algo_ui_example/: CMakeLists.txt  WDecoratedSimpleLabel.h  WIntensityProfileWidget.h
example/algo_ui_test/: CMakeLists.txt  WIntensityProfileWidget.cpp
example/bigbmp_view_example/: CMakeLists.txt  WBigBmpGraphicsView.cpp  WBigBmpGraphicsView.h  main.cpp  mainwindow.cpp  mainwindow.h
example/communication_client_example/: CMakeLists.txt  MainWindow.h  TripPlanResultModel.cpp  TripPlanResultModel.h  TripPlanner.cpp  TripPlanner.h  WSimpleTableView.cpp
example/communication_server_example/: CMakeLists.txt  Protocol.h  TripClient.cpp  TripClient.h  TripServer.cpp  TripServer.h
example/communication_test_client/: CMakeLists.txt  MainWindow.cpp  TripPlanner.cpp  TripPlanner.h  WHistoryComboBox.cpp  WHistoryComboBox.h  WHistoryDateTimeEdit.cpp  WHistoryDateTimeEdit.h  WSimpleTableModel.cpp  WSimpleTableModel.h  WSimpleTableModelT.h  WSimpleTableView.h  main.cpp
example/communication_test_server/: CMakeLists.txt  Protocol.h  TripClient.cpp  TripClient.h  TripServer.cpp  main.cpp
example/configuration_example/: CMakeLists.txt
example/configuration_test/: AppConfig.cpp  AppConfig.h  CMakeLists.txt  LoginInfo.cpp  LoginInfo.h  main.cpp
example/configuration_ui_example/: AppConfig.h  AppConfigEnums.h  CMakeLists.txt  SubConfig.h
example/configuration_ui_test/: AppConfig.cpp  AppConfig.h  CMakeLists.txt  CustomConfigEditor.cpp  CustomConfigEditor.h  LoginInfo.cpp  LoginInfo.h  SubConfig.cpp  main.cpp
example/firebird_db_example/: CMakeLists.txt  WSqlQueryModel.h  main.cpp
example/firebird_db_test/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  Tables.cpp  WSqlQueryModel.cpp  WSqlRelationalTableModel.h  main.cpp
example/firebird_db_test_employee/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
example/flamerobin_usage_test/: AutoFetchTableView.cpp  AutoFetchTableView.h  CMakeLists.txt  Employee.cpp  Employee.h  MainWindow.cpp  Tables.h  WSqlRelationalTableModel.h  main.cpp
example/ftp_example/: CMakeLists.txt  main.cpp
example/graphviz_graphicsview_example/: CMakeLists.txt  main.cpp
example/image_example/: CMakeLists.txt  WImageViewer.cpp  main.cpp
example/image_test/: CMakeLists.txt  MainWindow.cpp  TesterWindow.cpp  WCrossSplitter.cpp  WCrossSplitter.h  WDecoratedSimpleLabel.cpp  WImageViewer.h  main.cpp
example/packet_example/: CMakeLists.txt  main.cpp
example/packet_test/: CMakeLists.txt  main.cpp
example/serial_example/: CMakeLists.txt  MainWindow.cpp  main.cpp
example/serialtester/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
example/statemachine_example/: CMakeLists.txt  main.cpp  myevents.h  mystatemachine.cpp  mystatemachine.h  testerwindow.cpp  testerwindow.h
example/statemachine_test/: CMakeLists.txt  myeventids.h  myevents.cpp  myevents.h  mystatemachine.cpp  testerwindow.cpp  testerwindow.h
example/vector_draw_example/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
source/waffle/db/: CMakeLists.txt  WSqlFirebirdDriver.h  WSqlFirebirdTableCreateQueryBuilder.cpp  WSqlHeader.h  WSqlQueryBinder.cpp  WSqlQueryBinder.h  WSqlTableFieldNameList.cpp  WSqlTableFieldNameList.h  WSqlTableInfo.h  WSqlTableLister.cpp
source/waffle/statemachine/: CMakeLists.txt  WActive.cpp  WEvent.cpp
test/lib/packet/: CMakeLists.txt  DummyHardware.cpp  DummyHardware.h  DummyHardwareTest.cpp  DummyHardwareTest.h  Protocol.h  ProtocolIpu.h  WPacketModelTest.cpp  WPacketModelTest.h
waffle/lib+/fa/: CMakeLists.txt  PlusDummy.cpp
waffle/lib+/legacyIpu/: CMakeLists.txt
waffle/lib/common/: CMakeLists.txt
waffle/lib/db/: CMakeLists.txt  WSqlFieldDefinition.h  WSqlFirebirdDriver.cpp  WSqlFirebirdEnabler.cpp  WSqlFirebirdEnabler.h  WSqlFirebirdTableBuilder.cpp  WSqlFirebirdTableBuilder.h  WSqlFirebirdTableCreateQueryBuilder.cpp  WSqlFirebirdTableCreateQueryBuilder.h  WSqlMultiQuery.cpp  WSqlMultiQuery.h  WSqlQueryBuilder.cpp  WSqlQueryBuilder.h  WSqlRelationalTableDefinition.cpp  WSqlRelationalTableDefinition.h  WSqlRelationalTableModel.cpp  WSqlRelationalTableModel.h  WSqlTableDefinition.cpp  WSqlTableDefinition.h  WSqlTableLister.h  WSqlType.h
waffle/lib/gui/: CMakeLists.txt  UserInitArea.cpp  UserInitArea.h  WAutoLayoutDiagramScene.cpp  WAutoLayoutDiagramScene.h  WBigBmpGraphicsView.cpp  WBigBmpGraphicsView.h  WBigBmpImageFileLoader.cpp  WBigBmpImageFileLoader.h  WBigBmpRenderThread.cpp  WBigBmpRenderThread.h  WBigBmpRenderer.h  WBigBmpThreadedGraphicsScene.cpp  WBigBmpThreadedGraphicsScene.h  WDecoratedSimpleLabel.cpp  WDecoratedSimpleLabel.h  WEnumComboBox.cpp  WEnumComboBox.h  WGraphicsBigBmpImageItem.cpp  WGraphicsBigBmpImageItem.h  WGraphicsCachedImageItem.cpp  WGraphicsCachedImageItem.h  WGraphicsCachedImageProvider.h  WGraphicsUtil.cpp  WGraphicsUtil.h  WGraphicsVectorNodeItem.cpp  WGraphicsVectorNodeItem.h  WGraphicsVectorNodeItemParent.cpp  WGraphicsVectorNodeItemParent.h  WGraphicsVectorRectItem.cpp  WGraphicsVectorRectItem.h  WGraphicsView.cpp  WGraphicsView.h  WHexEdit.cpp  WHexEdit.h  WLogView.cpp  WLogView.h  WMainWindow.cpp  WMainWindow.h  WSerialPortPanel.cpp  (+8 more)
waffle/lib/image/: CMakeLists.txt  WImageBufferT.cpp
waffle/lib/packet/: AckScenario.org  CMakeLists.txt  WFtp.cpp  WFtp.h  WPacket.h  WPacketFixedLenString.h  WPacketFixedLengthModel.cpp  WPacketFixedLengthModel.h  WPacketHeadTailModel.cpp  WPacketHeadTailModel.h  WPacketHeaderBodyModel.cpp  WPacketHeaderBodyModel.h  WPacketIo.cpp  WPacketIo.h  WPacketIoT.h  WPacketModel.h  WPacketSerialPortIo.cpp  WPacketSerialPortIo.h  WPacketStream.cpp  WPacketStream.h  WPacketStringnizedType.h  WPacketTcpIo.cpp  WPacketTcpIo.h  WSerialPort.cpp  WSerialPort.h  WSerialPortEnumerator.cpp  WSerialPortEnumerator.h  WSynchronousFtp.cpp  WSynchronousFtp.h  WTcpAckManagedSocket.h  WTcpHeaderBodySocket.h  WTcpPacketFixedLengthModel.cpp  WTcpPacketFixedLengthModel.h  WTcpPacketHeadTailModel.cpp  WTcpPacketHeadTailModel.h  WTcpPacketHeaderBodyModel.cpp  WTcpPacketHeaderBodyModel.h  WTcpPacketModel.h  (+6 more)
(+120 files in other folders)
