# # Set up the environment
# find_package(Qt4 REQUIRED)
# find_package(Vld REQUIRED)
# find_package(Ipp REQUIRED)

add_subdirectory(configuration_test)
add_subdirectory(configuration_ui_test)
add_subdirectory(statemachine_test)
add_subdirectory(communication_test_server)
add_subdirectory(communication_test_client)
add_subdirectory(firebird_db_test)
# add_subdirectory(image_test)
