# # Set up the environment
# find_package(Qt4 REQUIRED)
# find_package(Vld REQUIRED)
# find_package(Ipp REQUIRED)
add_subdirectory(bigbmp_view_example)
add_subdirectory(communication_client_example)
add_subdirectory(communication_server_example)
add_subdirectory(configuration_example)
add_subdirectory(configuration_ui_example)
add_subdirectory(firebird_db_example)
add_subdirectory(ftp_example)
if(GraphViz_FOUND)
  add_subdirectory(graphviz_graphicsview_example)
endif()
add_subdirectory(serial_example)
add_subdirectory(statemachine_example)
add_subdirectory(vector_draw_example)
# add_subdirectory(image_example)
